--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,7 +13,7 @@
 
         <form class="login-input-form" method="POST" action="/login">
             <input type="text" placeholder="Mobile number" name="number" class="login-field" />
-            <input type="text" placeholder="Password" name="password" class="login-field" />
+            <input type="password" placeholder="Password" name="password" class="login-field" />
             <button class="login-button button">
                 <i class="lni lni-enter"></i>
                 <p>Login</p>
