--- a/public/common/global.css
+++ b/public/common/global.css
@@ -115,6 +115,14 @@ a {
     font-size: larger;
 }
 
+.header2 {
+    font-family: var(--main-font);
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-size: medium;
+    color: var(--secondary-fg);
+}
+
 .image {
     background-color: var(--card-bg);
     border-radius: var(--circle-radius);
@@ -355,7 +363,6 @@ a {
 .fg-button {
     border: 1px solid var(--primary-fg);
     background-color: var(--primary-fg);
-    color: var(--primary-bg);
 }
 
 .fg-button:hover {
@@ -460,6 +467,7 @@ a {
     color: var(--success-light);
 }
 
+
 @media screen and (max-width: 800px) {
     * {
         --icon-size: 1.5rem;
@@ -507,4 +515,64 @@ a {
     .mobile-top-bar-button i {
         font-size: var(--icon-size);
     }
+}
+
+.team-member {
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-gap: var(--medium-gap);
+    align-items: center;
+    width: 35%;
+    background-color: #FFFFFF;
+    padding: 30px;
+    border-radius: 24px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s ease;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+}
+
+.team-member[data-role="Manager"]{
+    background-color: var(--page-bg);
+}
+
+.team-member-picture {
+    width: 4rem;
+    height: 4rem;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.team-member-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+}
+
+#full-name {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.team-member[data-role="Manager"] #full-name {
+    color:#FFFFFF;
+}
+
+#role {
+    font-size: 0.8rem;
+}
+
+.team-member[data-role="Manager"] #role {
+    color:#FFFFFF;
+}
+
+#contact-no {
+    font-size: 0.8rem;
+}
+
+.team-member[data-role="Manager"] #contact-no {
+    color: #FFFFFF;
 }
