--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -45,7 +45,18 @@
                     <i class="lni lni-arrow-right"></i>
                 </li>
             </a>
-            <a class="nav-link-wrapper" href="/team">
+            {{#if (eq page "team-members")}}
+            <a class="nav-link-wrapper" href="/teamList">
+                <li class="nav-link" id="active-link">
+                    <div class="link-name">
+                        <i class="lni lni-user-multiple-4"></i>
+                        <p>Team</p>
+                    </div>
+                    <i class="lni lni-arrow-right"></i>
+                </li>
+            </a>
+            {{else}}
+            <a class="nav-link-wrapper" href="/teamList">
                 <li class="nav-link">
                     <div class="link-name">
                         <i class="lni lni-user-multiple-4"></i>
@@ -54,6 +65,7 @@
                     <i class="lni lni-arrow-right"></i>
                 </li>
             </a>
+            {{/if}}
         </ul>
     </section>
 
