--- a/public/common/global.css
+++ b/public/common/global.css
@@ -120,7 +120,40 @@ a {
     font-family: var(--main-font);
     letter-spacing: 4px;
     text-transform: uppercase;
-    font-size: larger;
+    font-size: 1.2rem;
+}
+
+.secondary-header {
+    font-family: var(--main-font);
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: var(--secondary-fg);
+}
+
+.text-field-container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--small-gap);
+    width: 100%;
+}
+
+.text-field:focus {
+    outline: 1px var(--border-dark) solid;
+}
+
+.field-label {
+    font-size: 0.8rem;
+}
+
+.text-field {
+    border: 1px solid var(--border-dark);
+    padding: 0.5rem 1rem;
+    border-radius: var(--input-field-radius);
+    font-family: var(--main-font);
+    font-size: 0.9rem;
+    color: var(--primary-fg);
+    flex: 1;
 }
 
 .image {
@@ -344,6 +377,7 @@ a {
     box-sizing: border-box;
     border-radius: var(--button-radius);
     padding: 0rem 1rem;
+    cursor: pointer;
 }
 
 .button-wrapper {
@@ -372,11 +406,11 @@ a {
     background-color: var(--accent-light);
 }
 
-.fg-button:hover .fg-button-wrapper {
+.fg-button:hover .button-wrapper {
     color: var(--accent-dark);
 }
 
-.fg-button-wrapper {
+.fg-button .button-wrapper {
     color: var(--primary-bg);
 }
 
@@ -389,17 +423,24 @@ a {
     border: 1px solid var(--accent-medium);
 }
 
-.bg-button:hover .bg-button-wrapper {
+.bg-button:hover .button-wrapper {
     color: var(--accent-medium);
 }
 
-.bg-button-wrapper {
+.bg-button .button-wrapper {
     color: var(--primary-fg);
 }
 
 .focus-button {
     background-color: var(--primary-fg);
     color: var(--primary-bg);
+}
+
+.disabled-button {
+    color: var(--border-light);
+    border: 1px solid var(--border-light);
+    background: transparent;
+    cursor: not-allowed;
 }
 
 .top-page-bar {
