--- a/public/common/eventCreate.css
+++ b/public/common/eventCreate.css
@@ -11,11 +11,12 @@
     display: flex;
     flex-direction: column;
     gap: var(--big-gap);
+    overflow: hidden;
 }
 
 .form-page-container {
     display: flex;
-    overflow: hidden;
+    transition: transform 0.5s cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 .form-page {
